--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <!-- sign up form -->
                 <div class="form_container sign_up_form">
                     <form action="#">
-                        <h2>SIGN UP</h2>
+                        <h2 class="main_header_forms">SIGN UP</h2>
                         <input type="text" placeholder="Username">
                         <input type="email" placeholder="Email">
                         <input type="password" placeholder="Password">
@@ -39,28 +39,32 @@
                             <input type="checkbox">
                             <a href="#" class="terms_text">Agree on terms and conditions</a>
                         </div>
-                        <button>Sign Up</button>
+                        <div class="form_btn">
+                            <button>Sign Up</button>
+                        </div>
                     </form>
                 </div>
                 <!-- login form -->
                 <div class="form_container login_form">
                     <form action="#">
-                        <h2>LOGIN</h2>
+                        <h2 class="main_header_forms">LOGIN</h2>
                         <input type="text" placeholder="Username">
                         <input type="password" placeholder="Password">
                         <a href="#">Forgot password/username?</a>
-                        <button>Login</button>
+                        <div class="form_btn">
+                            <button>Login</button>
+                        </div>
                     </form>
                 </div>
                 <!-- overlay container -->
                 <div class="overlay_container">
                     <div class="overlay">
-                        <div class="overlay_panel overlay_left">
+                        <div class="overlay_panel overlay_right">
                             <h2>LOGIN</h2>
                             <p>Continue your journy with Baa services here!</p>
                             <button class="ghost" id="logIn">Login</button>
                         </div>
-                        <div class="overlay_panel overlay_right"> 
+                        <div class="overlay_panel overlay_left"> 
                             <h2>SIGN UP</h2>
                             <p>Start your journy with Baa services here!</p>
                             <button class="ghost" id="signUp">Sign Up</button>
