added the message pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BaaServices login</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main_css/index.css">
 </head>
 <body>
     <!-- page grid -->
@@ -30,7 +30,7 @@
             <div class="container" id="container">
                 <!-- sign up form -->
                 <div class="form_container sign_up_form">
-                    <form action="#">
+                    <form action="welcome.html">
                         <h2 class="main_header_forms">SIGN UP</h2>
                         <input type="text" placeholder="Username">
                         <input type="email" placeholder="Email">
@@ -39,21 +39,25 @@
                             <input type="checkbox">
                             <a href="#" class="terms_text">Agree on terms and conditions</a>
                         </div>
-                        <div class="form_btn">
-                            <button>Sign Up</button>
-                        </div>
+                        <a href="welcome.html">
+                            <div class="form_btn">
+                                <button>Sign Up</button>
+                            </div>
+                        </a>         
                     </form>
                 </div>
                 <!-- login form -->
                 <div class="form_container login_form">
-                    <form action="#">
+                    <form action="welcome_back.html">
                         <h2 class="main_header_forms">LOGIN</h2>
                         <input type="text" placeholder="Username">
                         <input type="password" placeholder="Password">
                         <a href="#">Forgot password/username?</a>
-                        <div class="form_btn">
-                            <button>Login</button>
-                        </div>
+                        <a href="welcome_back.html">
+                            <div class="form_btn">
+                                <button>Login</button>
+                            </div>
+                        </a>
                     </form>
                 </div>
                 <!-- overlay container -->
