--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <div class="form_container sign_up_form">
                     <form action="welcome.html">
                         <h2 class="main_header_forms">SIGN UP</h2>
-                        <input type="text" placeholder="Username">
-                        <input type="email" placeholder="Email">
-                        <input type="password" placeholder="Password">
+                        <input type="text" placeholder="Username" required>
+                        <input type="email" placeholder="Email" required>
+                        <input type="password" placeholder="Password" required>
                         <div class="terms_and_conditions">
-                            <input type="checkbox">
+                            <input type="checkbox" required>
                             <a href="#" class="terms_text">Agree on terms and conditions</a>
                         </div>
                         <a href="welcome.html">
@@ -50,8 +50,8 @@
                 <div class="form_container login_form">
                     <form action="welcome_back.html">
                         <h2 class="main_header_forms">LOGIN</h2>
-                        <input type="text" placeholder="Username">
-                        <input type="password" placeholder="Password">
+                        <input type="text" placeholder="Username" required>
+                        <input type="password" placeholder="Password" required>
                         <a href="#">Forgot password/username?</a>
                         <a href="welcome_back.html">
                             <div class="form_btn">
